--- a/release/pipelines.release.yml
+++ b/release/pipelines.release.yml
@@ -49,31 +49,30 @@ pipelines:
             - ./jf c add internal --url=$int_entplus_deployer_url --user=$int_entplus_deployer_user --password=$int_entplus_deployer_apikey
             - ./jf gradlec --use-wrapper --repo-resolve ecosys-maven-remote --repo-deploy ecosys-oss-release-local --deploy-maven-desc
 
-            # Update version
-            - sed -i "s/\(currentVersion=\).*\$/\1${NEXT_VERSION}/" gradle.properties
-            - git commit -am "[artifactory-release] Release version ${NEXT_VERSION} [skipRun]" --allow-empty
-            - git tag ${NEXT_VERSION}
-            - git push
-            - git push --tags
-
-            # Run build and publish
-            - >
-              env -i PATH=$PATH HOME=$HOME GRADLE_OPTS=-Dorg.gradle.daemon=false
-              JFROG_CLI_BUILD_NAME=$JFROG_CLI_BUILD_NAME
-              JFROG_CLI_BUILD_NUMBER=$JFROG_CLI_BUILD_NUMBER
-              JFROG_CLI_BUILD_PROJECT=$JFROG_CLI_BUILD_PROJECT
-              ./jf gradle clean build -x test artifactoryPublish
-            - ./jf rt bag && ./jf rt bce
-            - ./jf rt bp
-            # - ./jf bs --fail=false
-
-            # Distribute release bundle
-            - ./jf ds rbc file-specs-java $NEXT_VERSION --spec=./release/specs/prod-rbc-filespec.json --spec-vars="version=$NEXT_VERSION" --sign
-            - ./jf ds rbd file-specs-java $NEXT_VERSION --site="releases.jfrog.io" --sync
+#            # Update version
+#            - sed -i "s/\(currentVersion=\).*\$/\1${NEXT_VERSION}/" gradle.properties
+#            - git commit -am "[artifactory-release] Release version ${NEXT_VERSION} [skipRun]" --allow-empty
+#            - git tag ${NEXT_VERSION}
+#            - git push
+#            - git push --tags
+#
+#            # Run build and publish
+#            - >
+#              env -i PATH=$PATH HOME=$HOME
+#              JFROG_CLI_BUILD_NAME=$JFROG_CLI_BUILD_NAME
+#              JFROG_CLI_BUILD_NUMBER=$JFROG_CLI_BUILD_NUMBER
+#              JFROG_CLI_BUILD_PROJECT=$JFROG_CLI_BUILD_PROJECT
+#              ./jf gradle clean build -x test artifactoryPublish
+#            - ./jf rt bag && ./jf rt bce
+#            - ./jf rt bp
+#            # - ./jf bs --fail=false
+#
+#            # Distribute release bundle
+#            - ./jf ds rbc file-specs-java $NEXT_VERSION --spec=./release/specs/prod-rbc-filespec.json --spec-vars="version=$NEXT_VERSION" --sign
+#            - ./jf ds rbd file-specs-java $NEXT_VERSION --site="releases.jfrog.io" --sync
 
             # Publish to Maven Central
             - >
-              env -i PATH=$PATH HOME=$HOME
               ORG_GRADLE_PROJECT_sonatypeUsername=$int_mvn_central_user
               ORG_GRADLE_PROJECT_sonatypePassword=$int_mvn_central_password
               ORG_GRADLE_PROJECT_signingKey=$(echo $int_mvn_central_signingKey | base64 -d)
